# people_detector

./: .gitignore  README.md  cleaning_robot.gv  log
src/detector_msg/: CMakeLists.txt  package.xml
src/detector_msg/msg/: bounding_box.msg
src/people_detector/: CMakeLists.txt  package.xml
src/people_detector/msg/: detection_result.msg
src/people_detector/src/: sub_detect_pub.cpp
src/project_filter_icp/: CMakeLists.txt  package.xml
src/project_filter_icp/launch/: display_urdf.launch  lidar_camera_fusion.launch
src/project_filter_icp/rviz/: rvizConfig.rviz
src/project_filter_icp/src/: merge.cpp  tmp.cpp
src/project_filter_icp/urdf/: robot.urdf
